--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/kmp1/tzx.js",
   "devDependencies": {
+    "commander": "^2.6.0",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-jshint": "^0.11.0",
@@ -38,7 +39,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jsdoc": "^0.5.7"
   },
-  "dependencies" : {
+  "dependencies": {
     "wave_js": "kmp1/wav.js"
   }
 }
